--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@
 /build
 /captures
 .externalNativeBuild
+
+\.idea/codeStyles/Project\.xml
+
+\.idea/caches/build_file_checksums\.ser
+
+\.idea/misc\.xml
+
+\.idea/modules\.xml
+
+\.idea/vcs\.xml
